hphp/hack/test/typecheck/as_expression/trait.php.exp
File "trait.php", line 6, characters 9-12:
Invalid "as" expression hint (Typing[4195])
  File "trait.php", line 6, characters 9-12:
  The "as" operator cannot be used with a trait
