hphp/hack/test/typecheck/as_expression/trait.php
<?hh // strict

trait TFoo {}

function f(mixed $x): void {
  $x as TFoo;
}
